Fix some broken CSS that was causing the entire layout to fallover

--- a/src/styles/base/_globals.scss
+++ b/src/styles/base/_globals.scss
@@ -151,12 +151,12 @@ hr {
 }
 
 @mixin motion($root) {
-	#{root}::view-transition-group(*),
-	#{root}::view-transition-old(*),
+	#{$root}::view-transition-group(*),
+	#{$root}::view-transition-old(*),
 	#{root}::view-transition-new(*) {
 		animation: none !important;
 	}
-	#{root} {
+	#{$root} {
 		*,
 		*::before,
 		*::after {
